--- a/package.json
+++ b/package.json
@@ -8,14 +8,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@metamask/onboarding": "^1.0.1",
-    "@metamask/providers": "^8.1.1",
-    "@typechain/ethers-v5": "^10.0.0",
     "ethers": "^5.6.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@types/node": "^17.0.23",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@vitejs/plugin-react": "^1.0.7",
